fix: realign offchip button

--- a/src/renderer/views/MainRouteRenderer.scss
+++ b/src/renderer/views/MainRouteRenderer.scss
@@ -700,7 +700,10 @@
         }
     }
 
-    .op-element .offchip-button svg { color: $tt-medium-light-gray; }
+    .op-element .offchip-button svg {
+        color: $tt-medium-light-gray;
+        margin-top: 4px;
+    }
 
     .op-type.icon {
         &.op {
